<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_heading"
        android:layout_width="404dp"
        android:layout_height="128dp"
        android:background="@drawable/rounded_heading"
        android:fontFamily="@font/abhaya_libre_extrabold"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/App_heading"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="182dp"
        android:layout_height="54dp"
        android:backgroundTint="#7C5E92"
        android:radius="16dp"
        android:text="@string/btnstart"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_heading"
        app:layout_constraintVertical_bias="0.855" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="249dp"
        android:layout_height="39dp"
        android:layout_marginBottom="132dp"
        android:fontFamily="@font/abhaya_libre_bold"
        android:gravity="center"
        android:text="Select your gender"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_heading"
        app:layout_constraintVertical_bias="0.809" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="305dp"
        android:layout_height="149dp"
        android:layout_marginTop="68dp"
        android:elevation="6dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_heading"
        app:layout_constraintVertical_bias="0.0">


        <EditText
            android:id="@+id/user_name"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="text"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/user_age"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.184"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_heading"
            app:layout_constraintVertical_bias="0.778" />

        <EditText
            android:id="@+id/user_age"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/user_age"
            android:inputType="text"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.184"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_heading"
            app:layout_constraintVertical_bias="0.357" />
    </com.google.android.material.card.MaterialCardView>

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="128dp"
        android:layout_height="121dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.089">

        <RadioButton
            android:id="@+id/femalebtn"
            android:layout_width="115dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:text="@string/female_Radiobtn"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/malebtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.087"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.4" />

        <RadioButton
            android:id="@+id/malebtn"
            android:layout_width="114dp"
            android:layout_height="38dp"
            android:text="@string/male_Radiobtn"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.327" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>