<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    tools:context=".calculationActivity">

    <TextView
        android:id="@+id/cal_heading"
        android:layout_width="444dp"
        android:layout_height="104dp"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded_heading"
        android:fontFamily="@font/abhaya_libre_extrabold"
        android:gravity="center"
        android:padding="24dp"
        android:text="@string/cal_heading"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/formLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <LinearLayout
        android:id="@+id/formLayout"
        android:layout_width="386dp"
        android:layout_height="374dp"
        android:background="@drawable/profile_box"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/white"
            app:cardCornerRadius="16dp"
            app:cardElevation="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerLayout">

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="361dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/weight_edittext"
                android:layout_width="288dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"

                android:hint="@string/weight_input"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_age" />

            <EditText
                android:id="@+id/height_edittext"
                android:layout_width="293dp"
                android:layout_height="41dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"

                android:hint="@string/height_input"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weight_edittext" />


        </LinearLayout>

        <Button
            android:id="@+id/cal_btn"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:backgroundTint="#7C5E92"
            android:text="@string/cal_btn"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/height_edittext" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>