<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/white"
    android:paddingTop="12dp"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="410dp"
        android:layout_height="80dp"
        android:background="@drawable/rounded_heading"
        android:fontFamily="@font/abhaya_libre_semibold"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/Result"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="384dp"
        android:layout_height="88dp"
        android:background="@drawable/profile_box"
        android:fontFamily="@font/abhaya_libre_extrabold"
        android:gravity="center"
        android:text="@string/Result_btn"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.211" />

    <ScrollView
        android:layout_width="391dp"
        android:layout_height="429dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abhaya_libre_medium"
            android:gravity="center"
            android:lineSpacingExtra="8dp"
            android:padding="16dp"
            android:scrollbars="vertical"
            android:text="@string/guidance"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.124" />
    </ScrollView>

    <LinearLayout
        android:layout_width="309dp"
        android:layout_height="99dp"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="17dp"
        android:background="@drawable/profile_box"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <ImageView
            android:id="@+id/profile_img"
            android:layout_width="130dp"
            android:layout_height="86dp"
            android:layout_gravity="center"
            tools:layout_editor_absoluteX="22dp"
            tools:layout_editor_absoluteY="91dp" />

        <LinearLayout
            android:layout_width="142dp"
            android:layout_height="88dp"
            android:layout_marginStart="4dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/profile_img"
            tools:layout_editor_absoluteY="92dp">

            <TextView
                android:id="@+id/nameTextview"
                android:layout_width="134dp"
                android:layout_height="42dp"
                android:fontFamily="@font/abhaya_libre_bold"
                android:gravity="center"
                android:text="name"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintVertical_bias="0.234" />

            <TextView
                android:id="@+id/ageTextview"
                android:layout_width="133dp"
                android:layout_height="39dp"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="age"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.431"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameTextview"
                app:layout_constraintVertical_bias="0.0" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>